UI レイアウト (Windowサイズに合わせる)

--- a/Gmaster/Views/Shared/_Layout.cshtml
+++ b/Gmaster/Views/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
     <title>@ViewData["Title"] - Gmaster</title>
     <environment include="Development,Staging,Production">
         <link rel="stylesheet" href="~/codebase/webix.css" />
+        <link rel="stylesheet" href="~/css/gmaster.css" />
         <script src="~/codebase/webix.js"></script>
     </environment>
 </head>
