--- a/Gmaster/Views/Home/Index.cshtml
+++ b/Gmaster/Views/Home/Index.cshtml
@@ -1,62 +1,76 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-@Html.ActionLink("UI Trial", "UiTrial")
 <script type="text/javascript" charset="utf-8">
-    webix.ui({
-        rows: [
-            {
-                view: "toolbar", id: "mybar", elements: [
-                    { view: "button", value: "Btn1", width: 70, click: "btn1_click" },
-                    { view: "button", value: "Btn2", width: 70, click: "btn2_click" },
-                    { view: "button", value: "Btn3", width: 70, click: "btn3_click" },
-                    { view: "button", value: "Clear Form", width: 85, click: '$$("tableform").clear()' }]
-            },
-            {
-                cols: [
-                    {
-                        rows: [
-                            {
-                                height: 35,
-                                view: "toolbar",
-                                elements: [
-                                    { view: "text", id: "list_input", label: "Table Filter", css: "fltr", labelWidth: 170 }
-                                ]
-                            },
-                            {
-                                view: "list",
-                                id: "tablelist",
-                                template: "#tablename#",
-                                select: true, //enables selection
-                                width: 600,
-                                height: 600,
-                                url: "/api/Tables/@ViewBag.DefaultSchema",
-                                ready: function () {
+    webix.ready(function () {
+        if (webix.CustomScroll && !webix.env.touch) webix.CustomScroll.init();
 
-                                }
-                            }
+        var content_layout = {
+            margin: 10, padding: 0, type: "wide",
+            view: "flexlayout",
+            cols: [
+                {
+                rows: [
+                    {
+                        height: 35,
+                        view: "toolbar",
+                        elements: [
+                            { view: "text", id: "list_input", label: "Table Filter", css: "fltr", labelWidth: 170 }
                         ]
                     },
-                    { view: "resizer" },
                     {
+                        view: "list",
+                        id: "tablelist",
+                        template: "#tablename#",
+                        select: true, //enables selection
+                        width: 600,
+                        height: 600,
+                        url: "/api/Tables/@ViewBag.DefaultSchema",
+                        ready: function () {
+
+                        }
                     }
                 ]
-            }
-        ]
-    });
+                }
+            ]
+        };
 
-    $$("list_input").attachEvent("onTimedKeyPress", function () {
-        var value = this.getValue().toLowerCase();
-        $$("tablelist").filter(function (obj) {
+        webix.ui({
+            id: "root_layout",
+            rows: [
+                {
+                    view: "toolbar", id: "mybar", elements: [
+                        { view: "button", value: "Btn1", width: 70, click: "btn1_click" },
+                        { view: "button", value: "Btn2", width: 70, click: "btn2_click" },
+                        { view: "button", value: "Btn3", width: 70, click: "btn3_click" },
+                        { view: "button", value: "Clear Form", width: 85, click: '$$("tableform").clear()' }]
+                },
+                {
+                    cols: [
+                        { view: "scrollview", body: content_layout },
+                        { view: "resizer" },
+                    ]
+                },
+                { template: "status: hoge", height: 30 }
+            ]
+        });
+        webix.ui.fullScreen();
+
+        $$("list_input").attachEvent("onTimedKeyPress", function () {
+            var value = this.getValue().toLowerCase();
+            $$("tablelist").filter(function (obj) {
             return obj.tabname.toLowerCase().indexOf(value) >= 0
-                || obj.tablename.toLowerCase().indexOf(value) >= 0;
-        })
-    });
-    $$("tablelist").attachEvent("onAfterSelect", function (id) {
-        var schm = $$("tablelist").getItem(id).tabschema;
-        var tbl = $$("tablelist").getItem(id).tabname;
-        var url = "@(Url.Action("Records","Table"))?schema="+schm+"&table=" + tbl;
-        window.open(url);
+            || obj.tablename.toLowerCase().indexOf(value) >= 0;
+            })
+        });
+
+        $$("tablelist").attachEvent("onAfterSelect", function (id) {
+            var schm = $$("tablelist").getItem(id).tabschema;
+            var tbl = $$("tablelist").getItem(id).tabname;
+            var url = "@(Url.Action("Records","Table"))?schema="+schm+"&table=" + tbl;
+            window.open(url);
+        });
+
     });
     function btn1_click() {
     }
