--- a/Gmaster/Views/Shared/_Layout.cshtml
+++ b/Gmaster/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <environment include="Development,Staging,Production">
         <link rel="stylesheet" href="~/codebase/webix.css" />
         <link rel="stylesheet" href="~/css/gmaster.css" />
+        <link href="~/codebase/skins/compact.css" rel="stylesheet" type="text/css">
         <script src="~/codebase/webix.js"></script>
     </environment>
 </head>
